# sae-steering

./: .gitignore  README.md  pyproject.toml
src/sae_steering/analysis/: drug_comparison.py  feature_discovery.py  steering.py
src/sae_steering/data/: cellxgene_loader.py  gene_mapping.py  tahoe_loader.py
src/sae_steering/models/: geneformer_wrapper.py  sae.py  scgpt_wrapper.py
src/sae_steering/training/: load_sae.py  train_sae.py
