[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sae-steering"
version = "0.0.1"
description = "Sparse autoencoders on scGPT activations, validated against Tahoe drug signatures."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
authors = [{ name = "mliu237" }]

dependencies = [
    "torch>=2.3,<2.6",
    "transformers>=4.40,<5.0",
    "einops>=0.7",
    "datasets>=2.18",
    "cellxgene-census>=1.15",
    "mygene>=3.2",
    "zarr>=2.17,<3.0",
    "scanpy>=1.10",
    "anndata>=0.10",
    "numpy>=1.24,<2.0",
    "pandas>=2.0",
    "polars>=0.20",
    "pyarrow>=15.0",
    "loguru>=0.7",
    "tqdm>=4.66",
    "gseapy>=1.1",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "jaxtyping>=0.2.28",
    "torchtext>=0.15",
    "scvi-tools>=1.1",
    "scib>=1.1",
    "leidenalg>=0.10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]
flash = [
    "flash-attn>=2.5,<3.0",
]
geneformer = [
    "accelerate>=0.30",
    "peft>=0.10",
]
tcga = [
    "pydeseq2>=0.4",
]
viz = [
    "matplotlib>=3.8",
    "umap-learn>=0.5",
]
logging = [
    "wandb>=0.16",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/sae_steering/models/sae.py" = ["F722"]
